Update the parent theme to the latest version

--- a/illustratr/languages/pl_PL.po
+++ b/illustratr/languages/pl_PL.po
@@ -1,4 +1,4 @@
-# Translation of WordPress.com - Themes - Illustratr in Azerbaijani
+# Translation of WordPress.com - Themes - Illustratr in Polish
 # This file is distributed under the same license as the WordPress.com - Themes - Illustratr package.
 msgid ""
 msgstr ""
@@ -6,67 +6,54 @@ msgstr ""
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Plural-Forms: nplurals=2; plural=n != 1;\n"
+"Plural-Forms: nplurals=3; plural=(n==1 ? 0 : n%10>=2 && n%10<=4 && (n%100<10 || n%100>=20) ? 1 : 2);\n"
 "X-Generator: GlotPress/2.4.0-alpha\n"
-"Language: az\n"
+"Language: pl\n"
 "Project-Id-Version: WordPress.com - Themes - Illustratr\n"
-
-#: inc/wpcom-colors.php:168
-msgid "Accent"
-msgstr "Vurğu"
 
 #: inc/wpcom-colors.php:9
 msgid "Background"
-msgstr "Arxa fon"
+msgstr "Tło"
 
 #. translators: used between list items, there is a space after the comma
 #: content-aside.php:45 content-audio.php:74 content-gallery.php:62
 #: content-image.php:56 content-link.php:45 content-quote.php:51
 #: content-status.php:49 content-video.php:74 content.php:84
 msgid "Tagged"
-msgstr "Etiketləndi"
+msgstr "Otagowane"
 
 #: functions.php:104
 msgid "Footer"
-msgstr "Zirzəmi"
-
-#. Description of the plugin/theme
-#: wp-content/themes/pub/illustratr/style.css
-msgid "A minimalist portfolio theme."
-msgstr "Minimalist portfel mövzusu."
+msgstr "Stopka"
 
 #: sidebar.php:11
 msgid "Widgets"
-msgstr "Vidcetlər"
+msgstr "Widgety"
 
 #: search.php:16
 msgid "Search Results for: %s"
-msgstr " %s üçün Axtarışın Nəticələri:"
-
-#: page-templates/portfolio-page.php:86
-msgid "Ready to publish your first project? <a href=\"%1$s\">Get started here</a>."
-msgstr "İlk layihənizi dərc etməyə hazırsınızmı? <a href=\"%1$s\">Buradan başlayın</a>."
+msgstr "Wyniki wyszukiwania dla zapytania &#8222;%s&#8221;"
 
 #: page-templates/portfolio-page.php:28
 msgid "Pages:"
-msgstr "Səhifələr:"
+msgstr "Strony:"
 
 #: inc/template-tags.php:125
 msgid "Your comment is awaiting moderation."
-msgstr "Şərhiniz yoxlama gözləyir."
+msgstr "Twój komentarz oczekuje na moderację."
 
 #: inc/template-tags.php:109
 msgid "Author"
-msgstr "Müəllif"
+msgstr "Autor"
 
 #: inc/template-tags.php:106
 msgctxt "1: date, 2: time"
 msgid "%1$s at %2$s"
-msgstr "%1$s %2$s"
+msgstr "%1$s o %2$s"
 
 #: inc/template-tags.php:87
 msgid "Pingback:"
-msgstr "Geri bildiriş: "
+msgstr "Pingback:"
 
 #: inc/template-tags.php:65
 msgctxt "Next post link"
@@ -76,47 +63,35 @@ msgstr "%title <span class=\"meta-nav\">&rarr;</span>"
 #: inc/template-tags.php:64
 msgctxt "Previous post link"
 msgid "<span class=\"meta-nav\">&larr;</span> %title"
-msgstr "<span class=\"meta-nav\">&larr;</span> %title"
+msgstr "<span class=\"meta-nav\">&larr;</span> &bdquo;%title&rdquo;"
 
 #: inc/template-tags.php:61
 msgid "Post navigation"
-msgstr "Yazı naviqasiyaları"
+msgstr "Zobacz wpisy"
 
 #: inc/template-tags.php:36
 msgid "Next <span class=\"meta-nav\">&rarr;</span>"
-msgstr "Sonrakı <span class=\"meta-nav\">&rarr;</span>"
+msgstr "Następny <span class=\"meta-nav\">&rarr;</span>"
 
 #: inc/template-tags.php:32
 msgid "<span class=\"meta-nav\">&larr;</span> Previous"
-msgstr "<span class=\"meta-nav\">&larr;</span> Öncəki"
+msgstr "<span class=\"meta-nav\">&larr;</span> Poprzedni"
 
 #: inc/template-tags.php:28
 msgid "Posts navigation"
-msgstr "Yazı naviqasiyaları"
+msgstr "Nawigacja po wpisach"
 
 #: inc/extras.php:104
 msgid "Page %s"
-msgstr "Səhifə %s"
-
-#: inc/customizer.php:24
-msgid "Hide title and content on Portfolio Page Template"
-msgstr "Portfel Səhifə Şablonunda başlığı və mühtəviyyatı gizlət"
+msgstr "Strona %s."
 
 #: header.php:42
 msgid "Skip to content"
-msgstr "Mühtəviyyata keç"
+msgstr "Przeskocz do treści"
 
 #: header.php:41
 msgid "Menu"
-msgstr "Menyu"
-
-#. translators: If there are characters in your language that are not supported
-#. * by Source Code Pro, translate this to 'off'. Do not translate into your
-#. own language.
-#: functions.php:190
-msgctxt "Source Code Pro font: on or off"
-msgid "on"
-msgstr "açıq"
+msgstr "Menu"
 
 #. translators: To add an additional PT Serif character subset specific to your
 #. language, translate this to 'cyrillic'. Do not translate into your own
@@ -124,7 +99,7 @@ msgstr "açıq"
 #: functions.php:162
 msgctxt "PT Serif font: add new subset (cyrillic)"
 msgid "no-subset"
-msgstr "alt-set yoxdur"
+msgstr "no-subset"
 
 #. translators: If there are characters in your language that are not supported
 #. * by PT Serif, translate this to 'off'. Do not translate into your own
@@ -132,15 +107,7 @@ msgstr "alt-set yoxdur"
 #: functions.php:158
 msgctxt "PT Serif font: on or off"
 msgid "on"
-msgstr "açıq"
-
-#. translators: To add an additional Source Sans Pro character subset specific
-#. to your language, translate this to 'vietnamese'. Do not translate into your
-#. own language.
-#: functions.php:130
-msgctxt "Source Sans Pro font: add new subset (vietnamese)"
-msgid "no-subset"
-msgstr "alt-qurulum yoxdur"
+msgstr "off"
 
 #. translators: If there are characters in your language that are not supported
 #. * by Source Sans Pro, translate this to 'off'. Do not translate into your
@@ -148,23 +115,19 @@ msgstr "alt-qurulum yoxdur"
 #: functions.php:126
 msgctxt "Source Sans Pro font: on or off"
 msgid "on"
-msgstr "açıq"
-
-#: functions.php:76
-msgid "Social Menu"
-msgstr "Sosial menyu"
+msgstr "off"
 
 #: functions.php:75
 msgid "Primary Menu"
-msgstr "Əsas menyu"
+msgstr "Menu główne"
 
 #: footer.php:30
 msgid "Theme: %1$s by %2$s."
-msgstr "Mövzu: %1$s tərəfindən %2$s."
+msgstr "Motyw: %1$s. Autor motywu: %2$s."
 
 #: footer.php:28
 msgid "Proudly powered by %s"
-msgstr "%s qürurla təqdim edər"
+msgstr "Dumnie wspierane przez WordPressa"
 
 #: content-portfolio-single.php:16 content-portfolio.php:21 content.php:42
 msgctxt "Used between list items, there is a space after the comma."
@@ -173,19 +136,19 @@ msgstr ", "
 
 #: content-none.php:28 page-templates/portfolio-page.php:90
 msgid "It seems we can&rsquo;t find what you&rsquo;re looking for. Perhaps searching can help."
-msgstr "Axtardığınız səhifə tapılmadı. Bəlkə axtarış qutusu axtardığınızı tapmaqda sizə kömək edər."
+msgstr "Nie udało się znaleźć tego, czego szukasz. Być może wyszukiwanie przyniesie lepsze rezultaty."
 
 #: content-none.php:23
 msgid "Sorry, but nothing matched your search terms. Please try again with some different keywords."
-msgstr "Bağışlayın, axtarış kriteriyalarınıza uyğun heç bir şey tapılmadı. Bəzi fərqli açar kəlmələrdən istifadə edərək təkrar yoxlayın."
+msgstr "Przykro nam, ale nie znaleziono niczego na podstawie wpisanych terminów. Spróbuj ponownie używając innych słów kluczowych."
 
 #: content-none.php:19
 msgid "Ready to publish your first post? <a href=\"%1$s\">Get started here</a>."
-msgstr "İlk yazınızı dərc etməyə hazırsınızmı? <a href=\"%1$s\">Buradan başlayın</a>."
+msgstr "Gotowy do publikacji swojego pierwszego postu? <a href=\"%1$s\">Zacznij tutaj</a>."
 
 #: content-none.php:13 page-templates/portfolio-page.php:80
 msgid "Nothing Found"
-msgstr "Tapılmadı"
+msgstr "Niczego nie znaleziono"
 
 #: content-aside.php:51 content-audio.php:80 content-gallery.php:68
 #: content-image.php:62 content-link.php:51 content-page.php:36
@@ -193,38 +156,38 @@ msgstr "Tapılmadı"
 #: content-video.php:80 content.php:91 inc/template-tags.php:87
 #: inc/template-tags.php:121 page-templates/portfolio-page.php:36
 msgid "Edit"
-msgstr "Redaktə et"
+msgstr "Edytuj"
 
 #: content-aside.php:48 content-audio.php:77 content-gallery.php:65
 #: content-image.php:59 content-link.php:48 content-page.php:33
 #: content-portfolio-single.php:40 content-quote.php:54 content-status.php:52
 #: content-video.php:77 content.php:88
 msgid "% Comments"
-msgstr "% Şərh"
+msgstr "% komentarzy"
 
 #: content-aside.php:48 content-audio.php:77 content-gallery.php:65
 #: content-image.php:59 content-link.php:48 content-page.php:33
 #: content-portfolio-single.php:40 content-quote.php:54 content-status.php:52
 #: content-video.php:77 content.php:88
 msgid "1 Comment"
-msgstr "1 Şərh"
+msgstr "1 Komentarz"
 
 #: content-aside.php:48 content-audio.php:77 content-gallery.php:65
 #: content-image.php:59 content-link.php:48 content-page.php:33
 #: content-portfolio-single.php:40 content-quote.php:54 content-status.php:52
 #: content-video.php:77 content.php:88
 msgid "Leave a comment"
-msgstr "Bir şərh yazın"
+msgstr "Dodaj komentarz"
 
 #: content-portfolio-single.php:36
 msgid "Tagged %1$s"
-msgstr "%1$s Etiketləndi"
+msgstr "Tagi %1$s"
 
 #: content-aside.php:41 content-audio.php:70 content-gallery.php:58
 #: content-image.php:52 content-link.php:41 content-quote.php:47
 #: content-status.php:45 content-video.php:70 content.php:79
 msgid "All %s posts"
-msgstr "bütün %s  yazıları"
+msgstr "Wszystkie posty typu %s"
 
 #. translators: used between list items, there is a space after the comma
 #: content-aside.php:30 content-aside.php:45 content-audio.php:43
@@ -234,120 +197,121 @@ msgstr "bütün %s  yazıları"
 #: content-quote.php:51 content-status.php:35 content-status.php:49
 #: content-video.php:43 content-video.php:74 content.php:34 content.php:84
 msgid ", "
-msgstr ","
+msgstr ", "
 
 #: content-aside.php:15 content-audio.php:11 content-gallery.php:44
 #: content-image.php:38 content-link.php:27 content-quote.php:15
 #: content-status.php:15 content-video.php:11 content.php:54
 msgid "Continue reading <span class=\"meta-nav\">&rarr;</span>"
-msgstr "Oxumağa davam et <span class=\"meta-nav\">&rarr;</span>"
+msgstr "Czytaj dalej <span class=\"meta-nav\">&rarr;</span>"
 
 #: comments.php:60
 msgid "Comments are closed."
-msgstr "Şərh üçün bağlıdır."
+msgstr "Możliwość komentowania jest wyłączona."
 
 #: comments.php:49
 msgid "Newer Comments &rarr;"
-msgstr "Yeni şərhlər &rarr;"
+msgstr "Nowsze komentarze &rarr;"
 
 #: comments.php:48
 msgid "&larr; Older Comments"
-msgstr "&larr; Əski şərhlər"
+msgstr "&larr; Starsze komentarze"
 
 #: comments.php:46
 msgid "Comment navigation"
-msgstr "Şərh naviqasiyası"
+msgstr "Nawigacja po komentarzach"
 
 #: comments.php:28
 msgctxt "comments title"
 msgid "One thought on &ldquo;%2$s&rdquo;"
 msgid_plural "%1$s thoughts on &ldquo;%2$s&rdquo;"
-msgstr[0] "&ldquo;%2$s&rdquo; üzərinə bir şərh"
-msgstr[1] "&ldquo;%2$s&rdquo; üzərinə %1$s şərh"
+msgstr[0] "Jedna uwaga do wpisu &ldquo;%2$s&rdquo;"
+msgstr[1] "%1$s uwagi do wpisu &ldquo;%2$s&rdquo;"
+msgstr[2] "%1$s uwag do wpisu &ldquo;%2$s&rdquo;"
 
 #: archive.php:72
 msgid "Archives"
-msgstr "Arxivlər"
+msgstr "Archiwa"
 
 #: archive.php:66
 msgid "Projects"
-msgstr "Layihələr"
+msgstr "Projekty"
 
 #: archive.php:63
 msgid "Chats"
-msgstr "Söhbətlər"
+msgstr "Konwersacje"
 
 #: archive.php:60
 msgid "Audios"
-msgstr "Audiolar"
+msgstr "Dźwięki"
 
 #: archive.php:57
 msgid "Statuses"
-msgstr "Statuslar"
+msgstr "Stany"
 
 #: archive.php:54
 msgid "Links"
-msgstr "Bağlantılar"
+msgstr "Odnośniki"
 
 #: archive.php:51
 msgid "Quotes"
-msgstr "Sitatlar"
+msgstr "Cytaty"
 
 #: archive.php:48
 msgid "Videos"
-msgstr "Videolar"
+msgstr "Filmy"
 
 #: archive.php:45
 msgid "Images"
-msgstr "Təsvirlər"
+msgstr "Obrazki"
 
 #: archive.php:42
 msgid "Galleries"
-msgstr "Qalereyalar"
+msgstr "Galerie"
 
 #: archive.php:39
 msgid "Asides"
-msgstr "Kənarlar"
+msgstr "Treści poboczne"
 
 #: archive.php:36
 msgctxt "yearly archives date format"
 msgid "Y"
-msgstr "İ"
+msgstr "Y"
 
 #: archive.php:36
 msgid "Year: %s"
-msgstr "Ay: %s"
+msgstr "Rok: %s"
 
 #: archive.php:33
 msgctxt "monthly archives date format"
 msgid "F Y"
-msgstr "Fİ"
+msgstr "F Y"
 
 #: archive.php:33
 msgid "Month: %s"
-msgstr "Ay: %s"
+msgstr "Miesiąc: %s"
 
 #: archive.php:30
 msgid "Day: %s"
-msgstr "Gün: %s"
+msgstr "Dzień: %s"
 
 #: archive.php:27
 msgid "Author: %s"
-msgstr "Müəllif: %s"
+msgstr "Autor: %s"
 
 #. translators: %1$s: smiley
 #: 404.php:44
 msgid "Try looking in the monthly archives. %1$s"
-msgstr "Aylıq arxivlərə baxmağı yoxlayın. %1$s"
+msgstr "Spróbuj poszukać w miesięcznym archiwum. %1$s"
 
 #: 404.php:27
 msgid "Most Used Categories"
-msgstr "Ən sıx istifadə edilən kateqoriyalar"
+msgstr "Popularne kategorie"
 
 #: 404.php:19
 msgid "It looks like nothing was found at this location. Maybe try one of the links below or a search?"
-msgstr "Burada heç bir şeyin tapılmadığı görünür. Bəlkə aşağıdakı bağlantılardan birini yoxlayasan və ya bir axtarış edəsən?"
+msgstr "Wygląda na to, że nic nie zostało znalezione w tym miejscu. Może spróbuj jednego z poniższych linków lub wyszukiwarki?"
 
 #: 404.php:15
 msgid "Oops! That page can&rsquo;t be found."
-msgstr "Bağışlayın! Bu səhifə tapılmır."
+msgstr "Ojej! Nie można znaleźć tej strony."
