--- a/illustratr/languages/ca.po
+++ b/illustratr/languages/ca.po
@@ -1,63 +1,52 @@
-# Translation of WordPress.com - Themes - Illustratr in Hungarian
+# Translation of WordPress.com - Themes - Illustratr in Catalan
 # This file is distributed under the same license as the WordPress.com - Themes - Illustratr package.
 msgid ""
 msgstr ""
-"PO-Revision-Date: 2017-03-23 07:32:39+0000\n"
+"PO-Revision-Date: 2017-01-15 18:26:45+0000\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=n != 1;\n"
-"X-Generator: GlotPress/2.4.0-alpha\n"
-"Language: hu\n"
+"X-Generator: GlotPress/2.3.0-alpha\n"
+"Language: ca\n"
 "Project-Id-Version: WordPress.com - Themes - Illustratr\n"
 
-#: inc/wpcom-colors.php:9
-msgid "Background"
-msgstr "Háttér"
+#: inc/jetpack.php:123
+msgid "Older projects"
+msgstr "Projectes més antics"
 
-#. translators: used between list items, there is a space after the comma
-#: content-aside.php:45 content-audio.php:74 content-gallery.php:62
-#: content-image.php:56 content-link.php:45 content-quote.php:51
-#: content-status.php:49 content-video.php:74 content.php:84
-msgid "Tagged"
-msgstr "Címke"
-
-#: functions.php:104
+#: functions.php:96
 msgid "Footer"
-msgstr "Lábrész"
+msgstr "Peu de pàgina"
 
 #: sidebar.php:11
 msgid "Widgets"
-msgstr "Widgetek"
+msgstr "Ginys"
 
 #: search.php:16
 msgid "Search Results for: %s"
-msgstr "%s kifejezésre történő keresés eredménye"
-
-#: page-templates/portfolio-page.php:86
-msgid "Ready to publish your first project? <a href=\"%1$s\">Get started here</a>."
-msgstr "Készen állsz az első projekted közzétételére? <a href=\"%1$s\">Kezdj hozzá!</a>."
+msgstr "Resultats de la cerca per a: %s"
 
 #: page-templates/portfolio-page.php:28
 msgid "Pages:"
-msgstr "Oldal:"
+msgstr "Pàgines:"
 
 #: inc/template-tags.php:125
 msgid "Your comment is awaiting moderation."
-msgstr "A hozzászólás rendszer-moderációra várakozik."
+msgstr "El comentari està esperant moderació."
 
 #: inc/template-tags.php:109
 msgid "Author"
-msgstr "Szerző"
+msgstr "Autor"
 
 #: inc/template-tags.php:106
 msgctxt "1: date, 2: time"
 msgid "%1$s at %2$s"
-msgstr "%1$s - %2$s"
+msgstr "%1$s a les %2$s"
 
 #: inc/template-tags.php:87
 msgid "Pingback:"
-msgstr "Visszajelzés:"
+msgstr "Retroenllaç:"
 
 #: inc/template-tags.php:65
 msgctxt "Next post link"
@@ -71,36 +60,28 @@ msgstr "<span class=\"meta-nav\">&larr;</span> %title"
 
 #: inc/template-tags.php:61
 msgid "Post navigation"
-msgstr "Bejegyzések navigációja"
-
-#: inc/template-tags.php:36
-msgid "Next <span class=\"meta-nav\">&rarr;</span>"
-msgstr "Következő <span class=\"meta-nav\">&rarr;</span>"
-
-#: inc/template-tags.php:32
-msgid "<span class=\"meta-nav\">&larr;</span> Previous"
-msgstr "<span class=\"meta-nav\">&larr;</span> Előző"
+msgstr "Navegació d'entrades"
 
 #: inc/template-tags.php:28
 msgid "Posts navigation"
-msgstr "Bejegyzések navigációja"
+msgstr "Navegacio d'entrades"
 
 #: inc/extras.php:104
 msgid "Page %s"
-msgstr "%s oldal"
+msgstr "Pàgina %s"
+
+#: header.php:43
+msgid "Skip to content"
+msgstr "Vés al contingut"
 
 #: header.php:42
-msgid "Skip to content"
-msgstr "Tovább a tartalomra"
-
-#: header.php:41
 msgid "Menu"
-msgstr "Menü"
+msgstr "Menú"
 
 #. translators: To add an additional PT Serif character subset specific to your
 #. language, translate this to 'cyrillic'. Do not translate into your own
 #. language.
-#: functions.php:162
+#: functions.php:154
 msgctxt "PT Serif font: add new subset (cyrillic)"
 msgid "no-subset"
 msgstr "no-subset"
@@ -108,34 +89,26 @@ msgstr "no-subset"
 #. translators: If there are characters in your language that are not supported
 #. * by PT Serif, translate this to 'off'. Do not translate into your own
 #. language.
-#: functions.php:158
+#: functions.php:150
 msgctxt "PT Serif font: on or off"
-msgid "on"
-msgstr "be"
-
-#. translators: If there are characters in your language that are not supported
-#. * by Source Sans Pro, translate this to 'off'. Do not translate into your
-#. own language.
-#: functions.php:126
-msgctxt "Source Sans Pro font: on or off"
 msgid "on"
 msgstr "on"
 
-#: functions.php:76
+#: functions.php:68
 msgid "Social Menu"
-msgstr "Közösségi menü"
+msgstr "Menú de xarxes socials"
 
-#: functions.php:75
+#: functions.php:67
 msgid "Primary Menu"
-msgstr "Elsődleges menü"
+msgstr "Menú principal"
 
 #: footer.php:30
 msgid "Theme: %1$s by %2$s."
-msgstr "Sablon: %1$s Szerző: %2$s."
+msgstr "Tema: %1$s de %2$s."
 
 #: footer.php:28
 msgid "Proudly powered by %s"
-msgstr "Köszönjük %s!"
+msgstr "Gràcies al %s"
 
 #: content-portfolio-single.php:16 content-portfolio.php:21 content.php:42
 msgctxt "Used between list items, there is a space after the comma."
@@ -144,58 +117,61 @@ msgstr ", "
 
 #: content-none.php:28 page-templates/portfolio-page.php:90
 msgid "It seems we can&rsquo;t find what you&rsquo;re looking for. Perhaps searching can help."
-msgstr "Úgy tűnik, nem található az, amire gondoltunk. Talán, egy újabb keresés segíthet."
+msgstr "Sembla que no podem trobar el que busqueu. Potser el cercador us pot ajudar."
 
 #: content-none.php:23
 msgid "Sorry, but nothing matched your search terms. Please try again with some different keywords."
-msgstr "Elnézést, nem találunk a keresési feltételeknek megfelelő eredményt. Másik kulcsszóval, kifejezéssel újra kellene kezdeni egy keresést."
+msgstr "Res no coincideix amb els termes de cerca. Torneu-ho a provar amb algunes paraules claus diferents."
 
 #: content-none.php:19
 msgid "Ready to publish your first post? <a href=\"%1$s\">Get started here</a>."
-msgstr "Készen állunk az első bejegyzés közzétételére? <a href=\"%1$s\">Kezdőlépések</a>."
+msgstr "Preparats per publicar la primera entrada? <a href=\"%1$s\">Comenceu aquí</a>."
 
 #: content-none.php:13 page-templates/portfolio-page.php:80
 msgid "Nothing Found"
-msgstr "Nincs megfelelő találat"
+msgstr "No s'ha trobat res"
 
-#: content-aside.php:51 content-audio.php:80 content-gallery.php:68
-#: content-image.php:62 content-link.php:51 content-page.php:36
-#: content-portfolio-single.php:43 content-quote.php:57 content-status.php:55
-#: content-video.php:80 content.php:91 inc/template-tags.php:87
+#: content-aside.php:55 content-audio.php:84 content-gallery.php:72
+#: content-image.php:66 content-link.php:55 content-page.php:36
+#: content-portfolio-single.php:43 content-quote.php:61 content-status.php:59
+#: content-video.php:84 content.php:95 inc/template-tags.php:87
 #: inc/template-tags.php:121 page-templates/portfolio-page.php:36
 msgid "Edit"
-msgstr "Szerkesztés"
+msgstr "Edita"
 
-#: content-aside.php:48 content-audio.php:77 content-gallery.php:65
-#: content-image.php:59 content-link.php:48 content-page.php:33
-#: content-portfolio-single.php:40 content-quote.php:54 content-status.php:52
-#: content-video.php:77 content.php:88
+#: content-aside.php:52 content-audio.php:81 content-gallery.php:69
+#: content-image.php:63 content-link.php:52 content-page.php:33
+#: content-portfolio-single.php:40 content-quote.php:58 content-status.php:56
+#: content-video.php:81 content.php:92
 msgid "% Comments"
-msgstr "% hozzászólás"
+msgstr "% comentaris"
 
-#: content-aside.php:48 content-audio.php:77 content-gallery.php:65
-#: content-image.php:59 content-link.php:48 content-page.php:33
-#: content-portfolio-single.php:40 content-quote.php:54 content-status.php:52
-#: content-video.php:77 content.php:88
+#: content-aside.php:52 content-audio.php:81 content-gallery.php:69
+#: content-image.php:63 content-link.php:52 content-page.php:33
+#: content-portfolio-single.php:40 content-quote.php:58 content-status.php:56
+#: content-video.php:81 content.php:92
 msgid "1 Comment"
-msgstr "1 hozzászólás"
+msgstr "1 comentari"
+
+#: content-aside.php:52 content-audio.php:81 content-gallery.php:69
+#: content-image.php:63 content-link.php:52 content-page.php:33
+#: content-portfolio-single.php:40 content-quote.php:58 content-status.php:56
+#: content-video.php:81 content.php:92
+msgid "Leave a comment"
+msgstr "Deixa un comentari"
 
 #: content-aside.php:48 content-audio.php:77 content-gallery.php:65
-#: content-image.php:59 content-link.php:48 content-page.php:33
-#: content-portfolio-single.php:40 content-quote.php:54 content-status.php:52
-#: content-video.php:77 content.php:88
-msgid "Leave a comment"
-msgstr "Hozzászólás"
-
-#: content-portfolio-single.php:36
+#: content-image.php:59 content-link.php:48 content-portfolio-single.php:36
+#: content-quote.php:54 content-status.php:52 content-video.php:77
+#: content.php:87
 msgid "Tagged %1$s"
-msgstr "Címkék: %1$s"
+msgstr "Etiquetat %1$s"
 
 #: content-aside.php:41 content-audio.php:70 content-gallery.php:58
 #: content-image.php:52 content-link.php:41 content-quote.php:47
 #: content-status.php:45 content-video.php:70 content.php:79
 msgid "All %s posts"
-msgstr "Minden %s bejegyzés"
+msgstr "Totes %s les entrades"
 
 #. translators: used between list items, there is a space after the comma
 #: content-aside.php:30 content-aside.php:45 content-audio.php:43
@@ -211,114 +187,110 @@ msgstr ", "
 #: content-image.php:38 content-link.php:27 content-quote.php:15
 #: content-status.php:15 content-video.php:11 content.php:54
 msgid "Continue reading <span class=\"meta-nav\">&rarr;</span>"
-msgstr "Bővebben... <span class=\"meta-nav\">&rarr;</span>"
+msgstr "Continua llegint <span class=\"meta-nav\">&rarr;</span>"
 
 #: comments.php:60
 msgid "Comments are closed."
-msgstr "Hozzászólások lezárva."
+msgstr "Els comentaris estan tancats."
 
 #: comments.php:49
 msgid "Newer Comments &rarr;"
-msgstr "Újabb hozzászólás &rarr;"
+msgstr "Comentaris més recents  &rarr;"
 
 #: comments.php:48
 msgid "&larr; Older Comments"
-msgstr "&larr; Korábbi hozzászólás"
+msgstr "&larr; Comentaris anteriors"
 
 #: comments.php:46
 msgid "Comment navigation"
-msgstr "Hozzászólás navigáció"
+msgstr "Navegació pels comentaris"
 
 #: comments.php:28
 msgctxt "comments title"
 msgid "One thought on &ldquo;%2$s&rdquo;"
 msgid_plural "%1$s thoughts on &ldquo;%2$s&rdquo;"
-msgstr[0] "&ldquo;%2$s&rdquo; bejegyzéshez egy hozzászólás"
-msgstr[1] "&ldquo;%2$s&rdquo; bejegyzéshez %1$ hozzászólás"
+msgstr[0] "Un pensament sobre &ldquo;%2$s&rdquo;"
+msgstr[1] "%1$s pensaments sobre &ldquo;%2$s&rdquo;"
 
 #: archive.php:72
 msgid "Archives"
-msgstr "Archívumok"
-
-#: archive.php:66
-msgid "Projects"
-msgstr "Feladatok"
+msgstr "Arxius"
 
 #: archive.php:63
 msgid "Chats"
-msgstr "Beszélgetések"
+msgstr "Xats"
 
 #: archive.php:60
 msgid "Audios"
-msgstr "Audiók"
+msgstr "Àudios"
 
 #: archive.php:57
 msgid "Statuses"
-msgstr "Állapotok"
+msgstr "Estats"
 
 #: archive.php:54
 msgid "Links"
-msgstr "Hivatkozások"
+msgstr "Enllaços"
 
 #: archive.php:51
 msgid "Quotes"
-msgstr "Idézetek"
+msgstr "Cites"
 
 #: archive.php:48
 msgid "Videos"
-msgstr "Videók"
+msgstr "Vídeos"
 
 #: archive.php:45
 msgid "Images"
-msgstr "Képek"
+msgstr "Imatges"
 
 #: archive.php:42
 msgid "Galleries"
-msgstr "Galériák"
+msgstr "Galeries"
 
 #: archive.php:39
 msgid "Asides"
-msgstr "Széljegyzetek"
+msgstr "Notes"
 
 #: archive.php:36
 msgctxt "yearly archives date format"
 msgid "Y"
-msgstr "Y."
+msgstr "Y"
 
 #: archive.php:36
 msgid "Year: %s"
-msgstr "Év: %s"
+msgstr "Any: %s"
 
 #: archive.php:33
 msgctxt "monthly archives date format"
 msgid "F Y"
-msgstr "Y. F"
+msgstr "F \\\\d\\\\e Y"
 
 #: archive.php:33
 msgid "Month: %s"
-msgstr "Hónap: %s"
+msgstr "Mes: %s"
 
 #: archive.php:30
 msgid "Day: %s"
-msgstr "Nap: %s"
+msgstr "Dia: %s"
 
 #: archive.php:27
 msgid "Author: %s"
-msgstr "Szerző: %s"
+msgstr "Autor: %s"
 
 #. translators: %1$s: smiley
 #: 404.php:44
 msgid "Try looking in the monthly archives. %1$s"
-msgstr "Próbáljunk betekinteni a hónap bejegyzéseibe: %1$s"
+msgstr "Intenteu cercar en l'arxiu mensual. %1$s"
 
 #: 404.php:27
 msgid "Most Used Categories"
-msgstr "Leggyakoribb kategóriák"
+msgstr "Categories més usades"
 
 #: 404.php:19
 msgid "It looks like nothing was found at this location. Maybe try one of the links below or a search?"
-msgstr "A keresett oldal vagy bejegyzés nem található. Próbálkozzunk meg az alábbi hivatkozásokkal vagy esetleg egy kereséssel."
+msgstr "Sembla que no s'ha trobat res en aquest lloc. Potser podeu provar un dels següents enllaços o fer una cerca?"
 
 #: 404.php:15
 msgid "Oops! That page can&rsquo;t be found."
-msgstr "Hoppá! A keresett oldal nem található."
+msgstr "Aquesta pàgina no es pot trobar."
