--- a/illustratr/languages/lt_LT.po
+++ b/illustratr/languages/lt_LT.po
@@ -1,4 +1,4 @@
-# Translation of WordPress.com - Themes - Illustratr in Azerbaijani
+# Translation of WordPress.com - Themes - Illustratr in Lithuanian
 # This file is distributed under the same license as the WordPress.com - Themes - Illustratr package.
 msgid ""
 msgstr ""
@@ -6,72 +6,63 @@ msgstr ""
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Plural-Forms: nplurals=2; plural=n != 1;\n"
+"Plural-Forms: nplurals=3; plural=(n%10==1 && n%100!=11 ? 0 : n%10>=2 && (n%100<10 || n%100>=20) ? 1 : 2);\n"
 "X-Generator: GlotPress/2.4.0-alpha\n"
-"Language: az\n"
+"Language: lt\n"
 "Project-Id-Version: WordPress.com - Themes - Illustratr\n"
-
-#: inc/wpcom-colors.php:168
-msgid "Accent"
-msgstr "Vurğu"
 
 #: inc/wpcom-colors.php:9
 msgid "Background"
-msgstr "Arxa fon"
+msgstr "Fono nustatymai"
 
 #. translators: used between list items, there is a space after the comma
 #: content-aside.php:45 content-audio.php:74 content-gallery.php:62
 #: content-image.php:56 content-link.php:45 content-quote.php:51
 #: content-status.php:49 content-video.php:74 content.php:84
 msgid "Tagged"
-msgstr "Etiketləndi"
+msgstr "Su  gaire"
 
 #: functions.php:104
 msgid "Footer"
-msgstr "Zirzəmi"
+msgstr "Poraštė"
 
-#. Description of the plugin/theme
-#: wp-content/themes/pub/illustratr/style.css
-msgid "A minimalist portfolio theme."
-msgstr "Minimalist portfel mövzusu."
+#. Template Name of the plugin/theme
+#: wp-content/themes/pub/illustratr/page-templates/portfolio-page.php
+msgid "Portfolio Page Template"
+msgstr "Portfolio puslapio šablonas"
 
 #: sidebar.php:11
 msgid "Widgets"
-msgstr "Vidcetlər"
+msgstr "Valdikliai"
 
 #: search.php:16
 msgid "Search Results for: %s"
-msgstr " %s üçün Axtarışın Nəticələri:"
+msgstr "Paieškos rezultatai skirti: %s"
 
 #: page-templates/portfolio-page.php:86
 msgid "Ready to publish your first project? <a href=\"%1$s\">Get started here</a>."
-msgstr "İlk layihənizi dərc etməyə hazırsınızmı? <a href=\"%1$s\">Buradan başlayın</a>."
+msgstr "Pasiruošę paskelbti savo pirmajį projektą? <a href=\"%1$s\">Pradėkite čia</a>."
 
 #: page-templates/portfolio-page.php:28
 msgid "Pages:"
-msgstr "Səhifələr:"
+msgstr "Puslapiai:"
 
 #: inc/template-tags.php:125
 msgid "Your comment is awaiting moderation."
-msgstr "Şərhiniz yoxlama gözləyir."
+msgstr "Komentaras laukia administratoriaus patvirtinimo."
 
 #: inc/template-tags.php:109
 msgid "Author"
-msgstr "Müəllif"
-
-#: inc/template-tags.php:106
-msgctxt "1: date, 2: time"
-msgid "%1$s at %2$s"
-msgstr "%1$s %2$s"
+msgstr "Autorius"
 
 #: inc/template-tags.php:87
 msgid "Pingback:"
-msgstr "Geri bildiriş: "
+msgstr "Atgalinė nuoroda:"
 
 #: inc/template-tags.php:65
 msgctxt "Next post link"
 msgid "%title <span class=\"meta-nav\">&rarr;</span>"
-msgstr "%title <span class=\"meta-nav\">&rarr;</span>"
+msgstr "% title <span class=\"meta-nav\">&rarr;</span>"
 
 #: inc/template-tags.php:64
 msgctxt "Previous post link"
@@ -80,43 +71,31 @@ msgstr "<span class=\"meta-nav\">&larr;</span> %title"
 
 #: inc/template-tags.php:61
 msgid "Post navigation"
-msgstr "Yazı naviqasiyaları"
+msgstr "Įrašo naršymas"
 
 #: inc/template-tags.php:36
 msgid "Next <span class=\"meta-nav\">&rarr;</span>"
-msgstr "Sonrakı <span class=\"meta-nav\">&rarr;</span>"
+msgstr "Sekantis <span class=\"meta-nav\">&rarr;</span>"
 
 #: inc/template-tags.php:32
 msgid "<span class=\"meta-nav\">&larr;</span> Previous"
-msgstr "<span class=\"meta-nav\">&larr;</span> Öncəki"
+msgstr "<span class=\"meta-nav\">&larr;</span> Ankstesnis"
 
 #: inc/template-tags.php:28
 msgid "Posts navigation"
-msgstr "Yazı naviqasiyaları"
+msgstr "Įrašų navigacija"
 
 #: inc/extras.php:104
 msgid "Page %s"
-msgstr "Səhifə %s"
-
-#: inc/customizer.php:24
-msgid "Hide title and content on Portfolio Page Template"
-msgstr "Portfel Səhifə Şablonunda başlığı və mühtəviyyatı gizlət"
+msgstr "Puslapis %s"
 
 #: header.php:42
 msgid "Skip to content"
-msgstr "Mühtəviyyata keç"
+msgstr "Praleisti ir eiti į turinį"
 
 #: header.php:41
 msgid "Menu"
-msgstr "Menyu"
-
-#. translators: If there are characters in your language that are not supported
-#. * by Source Code Pro, translate this to 'off'. Do not translate into your
-#. own language.
-#: functions.php:190
-msgctxt "Source Code Pro font: on or off"
-msgid "on"
-msgstr "açıq"
+msgstr "Meniu"
 
 #. translators: To add an additional PT Serif character subset specific to your
 #. language, translate this to 'cyrillic'. Do not translate into your own
@@ -124,7 +103,7 @@ msgstr "açıq"
 #: functions.php:162
 msgctxt "PT Serif font: add new subset (cyrillic)"
 msgid "no-subset"
-msgstr "alt-set yoxdur"
+msgstr "nėra poaibio"
 
 #. translators: If there are characters in your language that are not supported
 #. * by PT Serif, translate this to 'off'. Do not translate into your own
@@ -132,39 +111,23 @@ msgstr "alt-set yoxdur"
 #: functions.php:158
 msgctxt "PT Serif font: on or off"
 msgid "on"
-msgstr "açıq"
-
-#. translators: To add an additional Source Sans Pro character subset specific
-#. to your language, translate this to 'vietnamese'. Do not translate into your
-#. own language.
-#: functions.php:130
-msgctxt "Source Sans Pro font: add new subset (vietnamese)"
-msgid "no-subset"
-msgstr "alt-qurulum yoxdur"
-
-#. translators: If there are characters in your language that are not supported
-#. * by Source Sans Pro, translate this to 'off'. Do not translate into your
-#. own language.
-#: functions.php:126
-msgctxt "Source Sans Pro font: on or off"
-msgid "on"
-msgstr "açıq"
+msgstr "įjungti"
 
 #: functions.php:76
 msgid "Social Menu"
-msgstr "Sosial menyu"
+msgstr "Socialiniai tinklai"
 
 #: functions.php:75
 msgid "Primary Menu"
-msgstr "Əsas menyu"
+msgstr "Pagrindinis meniu"
 
 #: footer.php:30
 msgid "Theme: %1$s by %2$s."
-msgstr "Mövzu: %1$s tərəfindən %2$s."
+msgstr "Tema: %1$s sukūrė %2$s."
 
 #: footer.php:28
 msgid "Proudly powered by %s"
-msgstr "%s qürurla təqdim edər"
+msgstr "Sistema: %s"
 
 #: content-portfolio-single.php:16 content-portfolio.php:21 content.php:42
 msgctxt "Used between list items, there is a space after the comma."
@@ -173,19 +136,19 @@ msgstr ", "
 
 #: content-none.php:28 page-templates/portfolio-page.php:90
 msgid "It seems we can&rsquo;t find what you&rsquo;re looking for. Perhaps searching can help."
-msgstr "Axtardığınız səhifə tapılmadı. Bəlkə axtarış qutusu axtardığınızı tapmaqda sizə kömək edər."
+msgstr "Atrodo mes negalime rasti to ko jūs ieškote. Gal paieška padės."
 
 #: content-none.php:23
 msgid "Sorry, but nothing matched your search terms. Please try again with some different keywords."
-msgstr "Bağışlayın, axtarış kriteriyalarınıza uyğun heç bir şey tapılmadı. Bəzi fərqli açar kəlmələrdən istifadə edərək təkrar yoxlayın."
+msgstr "Deja, nieko panašaus rasti nepavyko. Pabandykite įvesti kitokį paieškos raktažodį. "
 
 #: content-none.php:19
 msgid "Ready to publish your first post? <a href=\"%1$s\">Get started here</a>."
-msgstr "İlk yazınızı dərc etməyə hazırsınızmı? <a href=\"%1$s\">Buradan başlayın</a>."
+msgstr "Pasirengę išleisti savo pirmą įrašą? <a href=\"%1$s\">Pradėkite čia</a>."
 
 #: content-none.php:13 page-templates/portfolio-page.php:80
 msgid "Nothing Found"
-msgstr "Tapılmadı"
+msgstr "Nieko nerasta"
 
 #: content-aside.php:51 content-audio.php:80 content-gallery.php:68
 #: content-image.php:62 content-link.php:51 content-page.php:36
@@ -193,38 +156,38 @@ msgstr "Tapılmadı"
 #: content-video.php:80 content.php:91 inc/template-tags.php:87
 #: inc/template-tags.php:121 page-templates/portfolio-page.php:36
 msgid "Edit"
-msgstr "Redaktə et"
+msgstr "Redaguoti"
 
 #: content-aside.php:48 content-audio.php:77 content-gallery.php:65
 #: content-image.php:59 content-link.php:48 content-page.php:33
 #: content-portfolio-single.php:40 content-quote.php:54 content-status.php:52
 #: content-video.php:77 content.php:88
 msgid "% Comments"
-msgstr "% Şərh"
+msgstr "% Komentaras"
 
 #: content-aside.php:48 content-audio.php:77 content-gallery.php:65
 #: content-image.php:59 content-link.php:48 content-page.php:33
 #: content-portfolio-single.php:40 content-quote.php:54 content-status.php:52
 #: content-video.php:77 content.php:88
 msgid "1 Comment"
-msgstr "1 Şərh"
+msgstr "Komentarų: 1"
 
 #: content-aside.php:48 content-audio.php:77 content-gallery.php:65
 #: content-image.php:59 content-link.php:48 content-page.php:33
 #: content-portfolio-single.php:40 content-quote.php:54 content-status.php:52
 #: content-video.php:77 content.php:88
 msgid "Leave a comment"
-msgstr "Bir şərh yazın"
+msgstr "Parašykite komentarą"
 
 #: content-portfolio-single.php:36
 msgid "Tagged %1$s"
-msgstr "%1$s Etiketləndi"
+msgstr "Pažymėta %1$s"
 
 #: content-aside.php:41 content-audio.php:70 content-gallery.php:58
 #: content-image.php:52 content-link.php:41 content-quote.php:47
 #: content-status.php:45 content-video.php:70 content.php:79
 msgid "All %s posts"
-msgstr "bütün %s  yazıları"
+msgstr "Visi %s įrašai"
 
 #. translators: used between list items, there is a space after the comma
 #: content-aside.php:30 content-aside.php:45 content-audio.php:43
@@ -234,120 +197,121 @@ msgstr "bütün %s  yazıları"
 #: content-quote.php:51 content-status.php:35 content-status.php:49
 #: content-video.php:43 content-video.php:74 content.php:34 content.php:84
 msgid ", "
-msgstr ","
+msgstr ", "
 
 #: content-aside.php:15 content-audio.php:11 content-gallery.php:44
 #: content-image.php:38 content-link.php:27 content-quote.php:15
 #: content-status.php:15 content-video.php:11 content.php:54
 msgid "Continue reading <span class=\"meta-nav\">&rarr;</span>"
-msgstr "Oxumağa davam et <span class=\"meta-nav\">&rarr;</span>"
+msgstr "Skaityti toliau <span class=\"meta-nav\">&rarr;</span>"
 
 #: comments.php:60
 msgid "Comments are closed."
-msgstr "Şərh üçün bağlıdır."
+msgstr "Komentavimo galimybė išjungta."
 
 #: comments.php:49
 msgid "Newer Comments &rarr;"
-msgstr "Yeni şərhlər &rarr;"
+msgstr "Naujesni komentarai &rarr;"
 
 #: comments.php:48
 msgid "&larr; Older Comments"
-msgstr "&larr; Əski şərhlər"
+msgstr "&larr; Senesni komentarai"
 
 #: comments.php:46
 msgid "Comment navigation"
-msgstr "Şərh naviqasiyası"
+msgstr "Komentaro naršymas"
 
 #: comments.php:28
 msgctxt "comments title"
 msgid "One thought on &ldquo;%2$s&rdquo;"
 msgid_plural "%1$s thoughts on &ldquo;%2$s&rdquo;"
-msgstr[0] "&ldquo;%2$s&rdquo; üzərinə bir şərh"
-msgstr[1] "&ldquo;%2$s&rdquo; üzərinə %1$s şərh"
+msgstr[0] "Vienas komentaras &ldquo;%2$s&rdquo;"
+msgstr[1] "%1$s komentarai &ldquo;%2$s&rdquo;"
+msgstr[2] "%1$s komentarų &ldquo;%2$s&rdquo;"
 
 #: archive.php:72
 msgid "Archives"
-msgstr "Arxivlər"
+msgstr "Archyvai"
 
 #: archive.php:66
 msgid "Projects"
-msgstr "Layihələr"
+msgstr "Projektai"
 
 #: archive.php:63
 msgid "Chats"
-msgstr "Söhbətlər"
+msgstr "Pokalbiai"
 
 #: archive.php:60
 msgid "Audios"
-msgstr "Audiolar"
+msgstr "Audio įrašai"
 
 #: archive.php:57
 msgid "Statuses"
-msgstr "Statuslar"
+msgstr "Statusai"
 
 #: archive.php:54
 msgid "Links"
-msgstr "Bağlantılar"
+msgstr "Nuorodos"
 
 #: archive.php:51
 msgid "Quotes"
-msgstr "Sitatlar"
+msgstr "Citatos"
 
 #: archive.php:48
 msgid "Videos"
-msgstr "Videolar"
+msgstr "Video įrašai"
 
 #: archive.php:45
 msgid "Images"
-msgstr "Təsvirlər"
+msgstr "Paveikslėliai"
 
 #: archive.php:42
 msgid "Galleries"
-msgstr "Qalereyalar"
+msgstr "Galerijos"
 
 #: archive.php:39
 msgid "Asides"
-msgstr "Kənarlar"
+msgstr "Šalutinė pastaba"
 
 #: archive.php:36
 msgctxt "yearly archives date format"
 msgid "Y"
-msgstr "İ"
+msgstr "Y &#109;."
 
 #: archive.php:36
 msgid "Year: %s"
-msgstr "Ay: %s"
+msgstr "Metai: %s"
 
 #: archive.php:33
 msgctxt "monthly archives date format"
 msgid "F Y"
-msgstr "Fİ"
+msgstr "Y &#109;. F &#109;&#279;&#110;."
 
 #: archive.php:33
 msgid "Month: %s"
-msgstr "Ay: %s"
+msgstr "Mėnesis: %s"
 
 #: archive.php:30
 msgid "Day: %s"
-msgstr "Gün: %s"
+msgstr "Diena: %s"
 
 #: archive.php:27
 msgid "Author: %s"
-msgstr "Müəllif: %s"
+msgstr "Autorius: %s"
 
 #. translators: %1$s: smiley
 #: 404.php:44
 msgid "Try looking in the monthly archives. %1$s"
-msgstr "Aylıq arxivlərə baxmağı yoxlayın. %1$s"
+msgstr "Pabandykite pažiūrėti mėnesio archyve. %1$s"
 
 #: 404.php:27
 msgid "Most Used Categories"
-msgstr "Ən sıx istifadə edilən kateqoriyalar"
+msgstr "Populiariausios kategorijos"
 
 #: 404.php:19
 msgid "It looks like nothing was found at this location. Maybe try one of the links below or a search?"
-msgstr "Burada heç bir şeyin tapılmadığı görünür. Bəlkə aşağıdakı bağlantılardan birini yoxlayasan və ya bir axtarış edəsən?"
+msgstr "Nieko nerasta. Galbūt pabandykite vieną iš nuorodų žemiau arba paiešką? "
 
 #: 404.php:15
 msgid "Oops! That page can&rsquo;t be found."
-msgstr "Bağışlayın! Bu səhifə tapılmır."
+msgstr "Deja, toks puslapis nerastas. "
