--- a/illustratr/languages/ro_RO.po
+++ b/illustratr/languages/ro_RO.po
@@ -1,4 +1,4 @@
-# Translation of WordPress.com - Themes - Illustratr in Azerbaijani
+# Translation of WordPress.com - Themes - Illustratr in Romanian
 # This file is distributed under the same license as the WordPress.com - Themes - Illustratr package.
 msgid ""
 msgstr ""
@@ -6,67 +6,80 @@ msgstr ""
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Plural-Forms: nplurals=2; plural=n != 1;\n"
+"Plural-Forms: nplurals=3; plural=(n==1 ? 0 : (n==0 || (n%100 > 0 && n%100 < 20)) ? 1 : 2);\n"
 "X-Generator: GlotPress/2.4.0-alpha\n"
-"Language: az\n"
+"Language: ro\n"
 "Project-Id-Version: WordPress.com - Themes - Illustratr\n"
 
 #: inc/wpcom-colors.php:168
 msgid "Accent"
-msgstr "Vurğu"
+msgstr "Accent"
 
 #: inc/wpcom-colors.php:9
 msgid "Background"
-msgstr "Arxa fon"
+msgstr "Fundal"
 
 #. translators: used between list items, there is a space after the comma
 #: content-aside.php:45 content-audio.php:74 content-gallery.php:62
 #: content-image.php:56 content-link.php:45 content-quote.php:51
 #: content-status.php:49 content-video.php:74 content.php:84
 msgid "Tagged"
-msgstr "Etiketləndi"
+msgstr "Etichetat"
+
+#: inc/jetpack.php:120
+msgid "Older projects"
+msgstr "Proiecte mai vechi"
+
+#: functions.php:106
+msgid "Hidden footer area that is revealed by the + button at the bottom of each page"
+msgstr "Zonă din subsol ascunsă care este arătată cu butonul + din partea de jos a fiecărei pagini"
 
 #: functions.php:104
 msgid "Footer"
-msgstr "Zirzəmi"
+msgstr "Subsol"
+
+#. Template Name of the plugin/theme
+#: wp-content/themes/pub/illustratr/page-templates/portfolio-page.php
+msgid "Portfolio Page Template"
+msgstr "Șablon pagină portofoliu"
 
 #. Description of the plugin/theme
 #: wp-content/themes/pub/illustratr/style.css
 msgid "A minimalist portfolio theme."
-msgstr "Minimalist portfel mövzusu."
+msgstr "O temă de portofoliu minimalistă."
 
 #: sidebar.php:11
 msgid "Widgets"
-msgstr "Vidcetlər"
+msgstr "Widget-uri"
 
 #: search.php:16
 msgid "Search Results for: %s"
-msgstr " %s üçün Axtarışın Nəticələri:"
+msgstr "Rezultatele căutări pentru: %s"
 
 #: page-templates/portfolio-page.php:86
 msgid "Ready to publish your first project? <a href=\"%1$s\">Get started here</a>."
-msgstr "İlk layihənizi dərc etməyə hazırsınızmı? <a href=\"%1$s\">Buradan başlayın</a>."
+msgstr "Gata să-ți publici primul proiect? <a href=\"%1$s\">Începe de aici</a>."
 
 #: page-templates/portfolio-page.php:28
 msgid "Pages:"
-msgstr "Səhifələr:"
+msgstr "Pagini:"
 
 #: inc/template-tags.php:125
 msgid "Your comment is awaiting moderation."
-msgstr "Şərhiniz yoxlama gözləyir."
+msgstr "Comentariul tău e în așteptare."
 
 #: inc/template-tags.php:109
 msgid "Author"
-msgstr "Müəllif"
+msgstr "Autor"
 
 #: inc/template-tags.php:106
 msgctxt "1: date, 2: time"
 msgid "%1$s at %2$s"
-msgstr "%1$s %2$s"
+msgstr "%1$s la %2$s"
 
 #: inc/template-tags.php:87
 msgid "Pingback:"
-msgstr "Geri bildiriş: "
+msgstr "Pingback:"
 
 #: inc/template-tags.php:65
 msgctxt "Next post link"
@@ -80,35 +93,35 @@ msgstr "<span class=\"meta-nav\">&larr;</span> %title"
 
 #: inc/template-tags.php:61
 msgid "Post navigation"
-msgstr "Yazı naviqasiyaları"
+msgstr "Navigare articole"
 
 #: inc/template-tags.php:36
 msgid "Next <span class=\"meta-nav\">&rarr;</span>"
-msgstr "Sonrakı <span class=\"meta-nav\">&rarr;</span>"
+msgstr "Următorul <span class=\"meta-nav\">&rarr;</span>"
 
 #: inc/template-tags.php:32
 msgid "<span class=\"meta-nav\">&larr;</span> Previous"
-msgstr "<span class=\"meta-nav\">&larr;</span> Öncəki"
+msgstr "<span class=\"meta-nav\">&larr;</span> Precedentul"
 
 #: inc/template-tags.php:28
 msgid "Posts navigation"
-msgstr "Yazı naviqasiyaları"
+msgstr "Navigarea articolelor"
 
 #: inc/extras.php:104
 msgid "Page %s"
-msgstr "Səhifə %s"
+msgstr "Pagina %s"
 
 #: inc/customizer.php:24
 msgid "Hide title and content on Portfolio Page Template"
-msgstr "Portfel Səhifə Şablonunda başlığı və mühtəviyyatı gizlət"
+msgstr "Ascunde titlu și conținut în șablonul pagină de portofoliu"
 
 #: header.php:42
 msgid "Skip to content"
-msgstr "Mühtəviyyata keç"
+msgstr "Sări la conţinut"
 
 #: header.php:41
 msgid "Menu"
-msgstr "Menyu"
+msgstr "Meniu"
 
 #. translators: If there are characters in your language that are not supported
 #. * by Source Code Pro, translate this to 'off'. Do not translate into your
@@ -116,7 +129,7 @@ msgstr "Menyu"
 #: functions.php:190
 msgctxt "Source Code Pro font: on or off"
 msgid "on"
-msgstr "açıq"
+msgstr "on"
 
 #. translators: To add an additional PT Serif character subset specific to your
 #. language, translate this to 'cyrillic'. Do not translate into your own
@@ -124,7 +137,7 @@ msgstr "açıq"
 #: functions.php:162
 msgctxt "PT Serif font: add new subset (cyrillic)"
 msgid "no-subset"
-msgstr "alt-set yoxdur"
+msgstr "no-subset"
 
 #. translators: If there are characters in your language that are not supported
 #. * by PT Serif, translate this to 'off'. Do not translate into your own
@@ -132,7 +145,7 @@ msgstr "alt-set yoxdur"
 #: functions.php:158
 msgctxt "PT Serif font: on or off"
 msgid "on"
-msgstr "açıq"
+msgstr "on"
 
 #. translators: To add an additional Source Sans Pro character subset specific
 #. to your language, translate this to 'vietnamese'. Do not translate into your
@@ -140,7 +153,7 @@ msgstr "açıq"
 #: functions.php:130
 msgctxt "Source Sans Pro font: add new subset (vietnamese)"
 msgid "no-subset"
-msgstr "alt-qurulum yoxdur"
+msgstr "no-subset"
 
 #. translators: If there are characters in your language that are not supported
 #. * by Source Sans Pro, translate this to 'off'. Do not translate into your
@@ -148,23 +161,23 @@ msgstr "alt-qurulum yoxdur"
 #: functions.php:126
 msgctxt "Source Sans Pro font: on or off"
 msgid "on"
-msgstr "açıq"
+msgstr "on"
 
 #: functions.php:76
 msgid "Social Menu"
-msgstr "Sosial menyu"
+msgstr "Meniu socializare"
 
 #: functions.php:75
 msgid "Primary Menu"
-msgstr "Əsas menyu"
+msgstr "Meniu principal"
 
 #: footer.php:30
 msgid "Theme: %1$s by %2$s."
-msgstr "Mövzu: %1$s tərəfindən %2$s."
+msgstr "Tema: %1$s de %2$s."
 
 #: footer.php:28
 msgid "Proudly powered by %s"
-msgstr "%s qürurla təqdim edər"
+msgstr "Propulsat cu mândrie de %s"
 
 #: content-portfolio-single.php:16 content-portfolio.php:21 content.php:42
 msgctxt "Used between list items, there is a space after the comma."
@@ -173,19 +186,19 @@ msgstr ", "
 
 #: content-none.php:28 page-templates/portfolio-page.php:90
 msgid "It seems we can&rsquo;t find what you&rsquo;re looking for. Perhaps searching can help."
-msgstr "Axtardığınız səhifə tapılmadı. Bəlkə axtarış qutusu axtardığınızı tapmaqda sizə kömək edər."
+msgstr "Se pare că nu putem găsi ceea ce cauți tu. Poate o căutare ar fi de ajutor."
 
 #: content-none.php:23
 msgid "Sorry, but nothing matched your search terms. Please try again with some different keywords."
-msgstr "Bağışlayın, axtarış kriteriyalarınıza uyğun heç bir şey tapılmadı. Bəzi fərqli açar kəlmələrdən istifadə edərək təkrar yoxlayın."
+msgstr "Regret, dar nimic nu se potrivește termenilor căutării tale. Te rog încearcă din nou cu cuvinte cheie diferite."
 
 #: content-none.php:19
 msgid "Ready to publish your first post? <a href=\"%1$s\">Get started here</a>."
-msgstr "İlk yazınızı dərc etməyə hazırsınızmı? <a href=\"%1$s\">Buradan başlayın</a>."
+msgstr "Gata să publici primul tău articol? <a href=\"%1$s\">Poți începe aici</a>."
 
 #: content-none.php:13 page-templates/portfolio-page.php:80
 msgid "Nothing Found"
-msgstr "Tapılmadı"
+msgstr "Nu a fost găsit nimic"
 
 #: content-aside.php:51 content-audio.php:80 content-gallery.php:68
 #: content-image.php:62 content-link.php:51 content-page.php:36
@@ -193,38 +206,38 @@ msgstr "Tapılmadı"
 #: content-video.php:80 content.php:91 inc/template-tags.php:87
 #: inc/template-tags.php:121 page-templates/portfolio-page.php:36
 msgid "Edit"
-msgstr "Redaktə et"
+msgstr "Editare"
 
 #: content-aside.php:48 content-audio.php:77 content-gallery.php:65
 #: content-image.php:59 content-link.php:48 content-page.php:33
 #: content-portfolio-single.php:40 content-quote.php:54 content-status.php:52
 #: content-video.php:77 content.php:88
 msgid "% Comments"
-msgstr "% Şərh"
+msgstr "% comentarii"
 
 #: content-aside.php:48 content-audio.php:77 content-gallery.php:65
 #: content-image.php:59 content-link.php:48 content-page.php:33
 #: content-portfolio-single.php:40 content-quote.php:54 content-status.php:52
 #: content-video.php:77 content.php:88
 msgid "1 Comment"
-msgstr "1 Şərh"
+msgstr "Un comentariu"
 
 #: content-aside.php:48 content-audio.php:77 content-gallery.php:65
 #: content-image.php:59 content-link.php:48 content-page.php:33
 #: content-portfolio-single.php:40 content-quote.php:54 content-status.php:52
 #: content-video.php:77 content.php:88
 msgid "Leave a comment"
-msgstr "Bir şərh yazın"
+msgstr "Scrie un comentariu"
 
 #: content-portfolio-single.php:36
 msgid "Tagged %1$s"
-msgstr "%1$s Etiketləndi"
+msgstr "Etichetat %1$s"
 
 #: content-aside.php:41 content-audio.php:70 content-gallery.php:58
 #: content-image.php:52 content-link.php:41 content-quote.php:47
 #: content-status.php:45 content-video.php:70 content.php:79
 msgid "All %s posts"
-msgstr "bütün %s  yazıları"
+msgstr "Toate cele %s de articole "
 
 #. translators: used between list items, there is a space after the comma
 #: content-aside.php:30 content-aside.php:45 content-audio.php:43
@@ -234,120 +247,121 @@ msgstr "bütün %s  yazıları"
 #: content-quote.php:51 content-status.php:35 content-status.php:49
 #: content-video.php:43 content-video.php:74 content.php:34 content.php:84
 msgid ", "
-msgstr ","
+msgstr ", "
 
 #: content-aside.php:15 content-audio.php:11 content-gallery.php:44
 #: content-image.php:38 content-link.php:27 content-quote.php:15
 #: content-status.php:15 content-video.php:11 content.php:54
 msgid "Continue reading <span class=\"meta-nav\">&rarr;</span>"
-msgstr "Oxumağa davam et <span class=\"meta-nav\">&rarr;</span>"
+msgstr "Continuă lectura <span class=\"meta-nav\">&rarr;</span>"
 
 #: comments.php:60
 msgid "Comments are closed."
-msgstr "Şərh üçün bağlıdır."
+msgstr "Comentariile nu sunt permise."
 
 #: comments.php:49
 msgid "Newer Comments &rarr;"
-msgstr "Yeni şərhlər &rarr;"
+msgstr "Comentarii mai noi &rarr;"
 
 #: comments.php:48
 msgid "&larr; Older Comments"
-msgstr "&larr; Əski şərhlər"
+msgstr "&larr; Comentarii mai vechi"
 
 #: comments.php:46
 msgid "Comment navigation"
-msgstr "Şərh naviqasiyası"
+msgstr "Navigare în comentarii"
 
 #: comments.php:28
 msgctxt "comments title"
 msgid "One thought on &ldquo;%2$s&rdquo;"
 msgid_plural "%1$s thoughts on &ldquo;%2$s&rdquo;"
-msgstr[0] "&ldquo;%2$s&rdquo; üzərinə bir şərh"
-msgstr[1] "&ldquo;%2$s&rdquo; üzərinə %1$s şərh"
+msgstr[0] "Un gând despre &8222;%2$s&8221;"
+msgstr[1] "%1$s gânduri despre &8222;%2$s&8221;"
+msgstr[2] "%1$s de gânduri despre &8222;%2$s&8221;"
 
 #: archive.php:72
 msgid "Archives"
-msgstr "Arxivlər"
+msgstr "Arhive"
 
 #: archive.php:66
 msgid "Projects"
-msgstr "Layihələr"
+msgstr "Proiecte"
 
 #: archive.php:63
 msgid "Chats"
-msgstr "Söhbətlər"
+msgstr "Discuții"
 
 #: archive.php:60
 msgid "Audios"
-msgstr "Audiolar"
+msgstr "Audio-uri"
 
 #: archive.php:57
 msgid "Statuses"
-msgstr "Statuslar"
+msgstr "Stări"
 
 #: archive.php:54
 msgid "Links"
-msgstr "Bağlantılar"
+msgstr "Legături"
 
 #: archive.php:51
 msgid "Quotes"
-msgstr "Sitatlar"
+msgstr "Citate"
 
 #: archive.php:48
 msgid "Videos"
-msgstr "Videolar"
+msgstr "Fişiere video"
 
 #: archive.php:45
 msgid "Images"
-msgstr "Təsvirlər"
+msgstr "Imagini"
 
 #: archive.php:42
 msgid "Galleries"
-msgstr "Qalereyalar"
+msgstr "Galerii"
 
 #: archive.php:39
 msgid "Asides"
-msgstr "Kənarlar"
+msgstr "Laterale"
 
 #: archive.php:36
 msgctxt "yearly archives date format"
 msgid "Y"
-msgstr "İ"
+msgstr "Y"
 
 #: archive.php:36
 msgid "Year: %s"
-msgstr "Ay: %s"
+msgstr "An: %s"
 
 #: archive.php:33
 msgctxt "monthly archives date format"
 msgid "F Y"
-msgstr "Fİ"
+msgstr "F Y"
 
 #: archive.php:33
 msgid "Month: %s"
-msgstr "Ay: %s"
+msgstr "Lună: %s"
 
 #: archive.php:30
 msgid "Day: %s"
-msgstr "Gün: %s"
+msgstr "Zi: %s"
 
 #: archive.php:27
 msgid "Author: %s"
-msgstr "Müəllif: %s"
+msgstr "Autor: %s"
 
 #. translators: %1$s: smiley
 #: 404.php:44
 msgid "Try looking in the monthly archives. %1$s"
-msgstr "Aylıq arxivlərə baxmağı yoxlayın. %1$s"
+msgstr "Încearcă să cauți în arhiva lunară. %1$s"
 
 #: 404.php:27
 msgid "Most Used Categories"
-msgstr "Ən sıx istifadə edilən kateqoriyalar"
+msgstr "Cele mai folosite categorii"
 
 #: 404.php:19
 msgid "It looks like nothing was found at this location. Maybe try one of the links below or a search?"
-msgstr "Burada heç bir şeyin tapılmadığı görünür. Bəlkə aşağıdakı bağlantılardan birini yoxlayasan və ya bir axtarış edəsən?"
+msgstr "Se pare că nu a fost găsit nimic la această locație. Poate încerci una din legăturile de mai jos sau o căutare?"
 
 #: 404.php:15
 msgid "Oops! That page can&rsquo;t be found."
-msgstr "Bağışlayın! Bu səhifə tapılmır."
+msgstr "Hopa! Pagina nu a fost găsită."
