--- a/illustratr/languages/sr_RS.po
+++ b/illustratr/languages/sr_RS.po
@@ -1,72 +1,63 @@
-# Translation of WordPress.com - Themes - Illustratr in Azerbaijani
+# Translation of WordPress.com - Themes - Illustratr in Serbian
 # This file is distributed under the same license as the WordPress.com - Themes - Illustratr package.
 msgid ""
 msgstr ""
-"PO-Revision-Date: 2017-03-23 07:32:39+0000\n"
+"PO-Revision-Date: 2017-05-21 12:51:13+0000\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Plural-Forms: nplurals=2; plural=n != 1;\n"
+"Plural-Forms: nplurals=3; plural=(n%10==1 && n%100!=11 ? 0 : n%10>=2 && n%10<=4 && (n%100<10 || n%100>=20) ? 1 : 2);\n"
 "X-Generator: GlotPress/2.4.0-alpha\n"
-"Language: az\n"
+"Language: sr_RS\n"
 "Project-Id-Version: WordPress.com - Themes - Illustratr\n"
 
 #: inc/wpcom-colors.php:168
 msgid "Accent"
-msgstr "Vurğu"
+msgstr "Акценат"
 
 #: inc/wpcom-colors.php:9
 msgid "Background"
-msgstr "Arxa fon"
+msgstr "Позадина"
 
 #. translators: used between list items, there is a space after the comma
 #: content-aside.php:45 content-audio.php:74 content-gallery.php:62
 #: content-image.php:56 content-link.php:45 content-quote.php:51
 #: content-status.php:49 content-video.php:74 content.php:84
 msgid "Tagged"
-msgstr "Etiketləndi"
+msgstr "Означено"
 
 #: functions.php:104
 msgid "Footer"
-msgstr "Zirzəmi"
-
-#. Description of the plugin/theme
-#: wp-content/themes/pub/illustratr/style.css
-msgid "A minimalist portfolio theme."
-msgstr "Minimalist portfel mövzusu."
+msgstr "Подножје"
 
 #: sidebar.php:11
 msgid "Widgets"
-msgstr "Vidcetlər"
+msgstr "Виџети"
 
 #: search.php:16
 msgid "Search Results for: %s"
-msgstr " %s üçün Axtarışın Nəticələri:"
-
-#: page-templates/portfolio-page.php:86
-msgid "Ready to publish your first project? <a href=\"%1$s\">Get started here</a>."
-msgstr "İlk layihənizi dərc etməyə hazırsınızmı? <a href=\"%1$s\">Buradan başlayın</a>."
+msgstr "Резултати претраживања за: %s"
 
 #: page-templates/portfolio-page.php:28
 msgid "Pages:"
-msgstr "Səhifələr:"
+msgstr "Стране:"
 
 #: inc/template-tags.php:125
 msgid "Your comment is awaiting moderation."
-msgstr "Şərhiniz yoxlama gözləyir."
+msgstr "Ваш коментар чека преглед."
 
 #: inc/template-tags.php:109
 msgid "Author"
-msgstr "Müəllif"
+msgstr "Аутор"
 
 #: inc/template-tags.php:106
 msgctxt "1: date, 2: time"
 msgid "%1$s at %2$s"
-msgstr "%1$s %2$s"
+msgstr "%1$s у %2$s"
 
 #: inc/template-tags.php:87
 msgid "Pingback:"
-msgstr "Geri bildiriş: "
+msgstr "Повратни пинг: "
 
 #: inc/template-tags.php:65
 msgctxt "Next post link"
@@ -80,43 +71,31 @@ msgstr "<span class=\"meta-nav\">&larr;</span> %title"
 
 #: inc/template-tags.php:61
 msgid "Post navigation"
-msgstr "Yazı naviqasiyaları"
+msgstr "Кретање чланака"
 
 #: inc/template-tags.php:36
 msgid "Next <span class=\"meta-nav\">&rarr;</span>"
-msgstr "Sonrakı <span class=\"meta-nav\">&rarr;</span>"
+msgstr "Следеће <span class=\"meta-nav\">&rarr;</span>"
 
 #: inc/template-tags.php:32
 msgid "<span class=\"meta-nav\">&larr;</span> Previous"
-msgstr "<span class=\"meta-nav\">&larr;</span> Öncəki"
+msgstr "<span class=\"meta-nav\">&larr;</span> Претходно"
 
 #: inc/template-tags.php:28
 msgid "Posts navigation"
-msgstr "Yazı naviqasiyaları"
+msgstr "Кретање чланака"
 
 #: inc/extras.php:104
 msgid "Page %s"
-msgstr "Səhifə %s"
-
-#: inc/customizer.php:24
-msgid "Hide title and content on Portfolio Page Template"
-msgstr "Portfel Səhifə Şablonunda başlığı və mühtəviyyatı gizlət"
+msgstr "Страна %s"
 
 #: header.php:42
 msgid "Skip to content"
-msgstr "Mühtəviyyata keç"
+msgstr "Скочи на садржај"
 
 #: header.php:41
 msgid "Menu"
-msgstr "Menyu"
-
-#. translators: If there are characters in your language that are not supported
-#. * by Source Code Pro, translate this to 'off'. Do not translate into your
-#. own language.
-#: functions.php:190
-msgctxt "Source Code Pro font: on or off"
-msgid "on"
-msgstr "açıq"
+msgstr "Изборник"
 
 #. translators: To add an additional PT Serif character subset specific to your
 #. language, translate this to 'cyrillic'. Do not translate into your own
@@ -124,7 +103,7 @@ msgstr "açıq"
 #: functions.php:162
 msgctxt "PT Serif font: add new subset (cyrillic)"
 msgid "no-subset"
-msgstr "alt-set yoxdur"
+msgstr "cyrillic"
 
 #. translators: If there are characters in your language that are not supported
 #. * by PT Serif, translate this to 'off'. Do not translate into your own
@@ -132,15 +111,7 @@ msgstr "alt-set yoxdur"
 #: functions.php:158
 msgctxt "PT Serif font: on or off"
 msgid "on"
-msgstr "açıq"
-
-#. translators: To add an additional Source Sans Pro character subset specific
-#. to your language, translate this to 'vietnamese'. Do not translate into your
-#. own language.
-#: functions.php:130
-msgctxt "Source Sans Pro font: add new subset (vietnamese)"
-msgid "no-subset"
-msgstr "alt-qurulum yoxdur"
+msgstr "on"
 
 #. translators: If there are characters in your language that are not supported
 #. * by Source Sans Pro, translate this to 'off'. Do not translate into your
@@ -148,23 +119,19 @@ msgstr "alt-qurulum yoxdur"
 #: functions.php:126
 msgctxt "Source Sans Pro font: on or off"
 msgid "on"
-msgstr "açıq"
-
-#: functions.php:76
-msgid "Social Menu"
-msgstr "Sosial menyu"
+msgstr "off"
 
 #: functions.php:75
 msgid "Primary Menu"
-msgstr "Əsas menyu"
+msgstr "Примарни изборник"
 
 #: footer.php:30
 msgid "Theme: %1$s by %2$s."
-msgstr "Mövzu: %1$s tərəfindən %2$s."
+msgstr "Тема: %1$s од %2$s."
 
 #: footer.php:28
 msgid "Proudly powered by %s"
-msgstr "%s qürurla təqdim edər"
+msgstr "Са поносом покреће %s"
 
 #: content-portfolio-single.php:16 content-portfolio.php:21 content.php:42
 msgctxt "Used between list items, there is a space after the comma."
@@ -173,19 +140,19 @@ msgstr ", "
 
 #: content-none.php:28 page-templates/portfolio-page.php:90
 msgid "It seems we can&rsquo;t find what you&rsquo;re looking for. Perhaps searching can help."
-msgstr "Axtardığınız səhifə tapılmadı. Bəlkə axtarış qutusu axtardığınızı tapmaqda sizə kömək edər."
+msgstr "Изгледа да не можемо да пронађемо оно што сте тражили. Можда ће претраживање или једна од веза испод помоћи."
 
 #: content-none.php:23
 msgid "Sorry, but nothing matched your search terms. Please try again with some different keywords."
-msgstr "Bağışlayın, axtarış kriteriyalarınıza uyğun heç bir şey tapılmadı. Bəzi fərqli açar kəlmələrdən istifadə edərək təkrar yoxlayın."
+msgstr "Нажалост, ваша претрага није донела резултате. Молимо вас, покушајте поново са другачијим параметрима."
 
 #: content-none.php:19
 msgid "Ready to publish your first post? <a href=\"%1$s\">Get started here</a>."
-msgstr "İlk yazınızı dərc etməyə hazırsınızmı? <a href=\"%1$s\">Buradan başlayın</a>."
+msgstr "Спремни сте да објавите свој први чланак? <a href=\"%1$s\">Започните овде</a>."
 
 #: content-none.php:13 page-templates/portfolio-page.php:80
 msgid "Nothing Found"
-msgstr "Tapılmadı"
+msgstr "Ништа није пронађено"
 
 #: content-aside.php:51 content-audio.php:80 content-gallery.php:68
 #: content-image.php:62 content-link.php:51 content-page.php:36
@@ -193,38 +160,34 @@ msgstr "Tapılmadı"
 #: content-video.php:80 content.php:91 inc/template-tags.php:87
 #: inc/template-tags.php:121 page-templates/portfolio-page.php:36
 msgid "Edit"
-msgstr "Redaktə et"
+msgstr "Уреди"
 
 #: content-aside.php:48 content-audio.php:77 content-gallery.php:65
 #: content-image.php:59 content-link.php:48 content-page.php:33
 #: content-portfolio-single.php:40 content-quote.php:54 content-status.php:52
 #: content-video.php:77 content.php:88
 msgid "% Comments"
-msgstr "% Şərh"
+msgstr "% коментара"
 
 #: content-aside.php:48 content-audio.php:77 content-gallery.php:65
 #: content-image.php:59 content-link.php:48 content-page.php:33
 #: content-portfolio-single.php:40 content-quote.php:54 content-status.php:52
 #: content-video.php:77 content.php:88
 msgid "1 Comment"
-msgstr "1 Şərh"
+msgstr "1 коментар"
 
 #: content-aside.php:48 content-audio.php:77 content-gallery.php:65
 #: content-image.php:59 content-link.php:48 content-page.php:33
 #: content-portfolio-single.php:40 content-quote.php:54 content-status.php:52
 #: content-video.php:77 content.php:88
 msgid "Leave a comment"
-msgstr "Bir şərh yazın"
-
-#: content-portfolio-single.php:36
-msgid "Tagged %1$s"
-msgstr "%1$s Etiketləndi"
+msgstr "Оставите коментар"
 
 #: content-aside.php:41 content-audio.php:70 content-gallery.php:58
 #: content-image.php:52 content-link.php:41 content-quote.php:47
 #: content-status.php:45 content-video.php:70 content.php:79
 msgid "All %s posts"
-msgstr "bütün %s  yazıları"
+msgstr "Све објаве: %s"
 
 #. translators: used between list items, there is a space after the comma
 #: content-aside.php:30 content-aside.php:45 content-audio.php:43
@@ -234,120 +197,121 @@ msgstr "bütün %s  yazıları"
 #: content-quote.php:51 content-status.php:35 content-status.php:49
 #: content-video.php:43 content-video.php:74 content.php:34 content.php:84
 msgid ", "
-msgstr ","
+msgstr ", "
 
 #: content-aside.php:15 content-audio.php:11 content-gallery.php:44
 #: content-image.php:38 content-link.php:27 content-quote.php:15
 #: content-status.php:15 content-video.php:11 content.php:54
 msgid "Continue reading <span class=\"meta-nav\">&rarr;</span>"
-msgstr "Oxumağa davam et <span class=\"meta-nav\">&rarr;</span>"
+msgstr "Наставите са читањем <span class=\"meta-nav\">&rarr;</span>"
 
 #: comments.php:60
 msgid "Comments are closed."
-msgstr "Şərh üçün bağlıdır."
+msgstr "Затворено за коментаре."
 
 #: comments.php:49
 msgid "Newer Comments &rarr;"
-msgstr "Yeni şərhlər &rarr;"
+msgstr "Новији коментари &rarr;"
 
 #: comments.php:48
 msgid "&larr; Older Comments"
-msgstr "&larr; Əski şərhlər"
+msgstr "&larr; Старији коментари"
 
 #: comments.php:46
 msgid "Comment navigation"
-msgstr "Şərh naviqasiyası"
+msgstr "Кретање коментара"
 
 #: comments.php:28
 msgctxt "comments title"
 msgid "One thought on &ldquo;%2$s&rdquo;"
 msgid_plural "%1$s thoughts on &ldquo;%2$s&rdquo;"
-msgstr[0] "&ldquo;%2$s&rdquo; üzərinə bir şərh"
-msgstr[1] "&ldquo;%2$s&rdquo; üzərinə %1$s şərh"
+msgstr[0] "Једно мишљење на &#0132;%2$s&#0147;"
+msgstr[1] "%1$s мишљења на &#0132;%2$s&#0147;"
+msgstr[2] "%1$s мишљења на &#0132;%2$s&#0147;"
 
 #: archive.php:72
 msgid "Archives"
-msgstr "Arxivlər"
+msgstr "Архиве"
 
 #: archive.php:66
 msgid "Projects"
-msgstr "Layihələr"
+msgstr "Пројекат"
 
 #: archive.php:63
 msgid "Chats"
-msgstr "Söhbətlər"
+msgstr "Ћаскање"
 
 #: archive.php:60
 msgid "Audios"
-msgstr "Audiolar"
+msgstr "Аудио записи"
 
 #: archive.php:57
 msgid "Statuses"
-msgstr "Statuslar"
+msgstr "Стања"
 
 #: archive.php:54
 msgid "Links"
-msgstr "Bağlantılar"
+msgstr "Везе"
 
 #: archive.php:51
 msgid "Quotes"
-msgstr "Sitatlar"
+msgstr "Цитати"
 
 #: archive.php:48
 msgid "Videos"
-msgstr "Videolar"
+msgstr "Видео записи"
 
 #: archive.php:45
 msgid "Images"
-msgstr "Təsvirlər"
+msgstr "Слике"
 
 #: archive.php:42
 msgid "Galleries"
-msgstr "Qalereyalar"
+msgstr "Галерије"
 
 #: archive.php:39
 msgid "Asides"
-msgstr "Kənarlar"
+msgstr "Напомене"
 
 #: archive.php:36
 msgctxt "yearly archives date format"
 msgid "Y"
-msgstr "İ"
+msgstr "Y"
 
 #: archive.php:36
 msgid "Year: %s"
-msgstr "Ay: %s"
+msgstr "Година: %s"
 
 #: archive.php:33
 msgctxt "monthly archives date format"
 msgid "F Y"
-msgstr "Fİ"
+msgstr "F Y"
 
 #: archive.php:33
 msgid "Month: %s"
-msgstr "Ay: %s"
+msgstr "Месец: %s"
 
 #: archive.php:30
 msgid "Day: %s"
-msgstr "Gün: %s"
+msgstr "Дан: %s"
 
 #: archive.php:27
 msgid "Author: %s"
-msgstr "Müəllif: %s"
+msgstr "Аутор: %s"
 
 #. translators: %1$s: smiley
 #: 404.php:44
 msgid "Try looking in the monthly archives. %1$s"
-msgstr "Aylıq arxivlərə baxmağı yoxlayın. %1$s"
+msgstr "Покушајте са гледањем месечних архива. %1$s"
 
 #: 404.php:27
 msgid "Most Used Categories"
-msgstr "Ən sıx istifadə edilən kateqoriyalar"
+msgstr "Најкоришћеније категорије"
 
 #: 404.php:19
 msgid "It looks like nothing was found at this location. Maybe try one of the links below or a search?"
-msgstr "Burada heç bir şeyin tapılmadığı görünür. Bəlkə aşağıdakı bağlantılardan birini yoxlayasan və ya bir axtarış edəsən?"
+msgstr "Ништа није нађено на овој локацији. Можда да покушате да пронађете тражени садржај међу доњим линковима или путем претраге?"
 
 #: 404.php:15
 msgid "Oops! That page can&rsquo;t be found."
-msgstr "Bağışlayın! Bu səhifə tapılmır."
+msgstr "Упс! Та страница није пронађена."
