--- a/illustratr/languages/sv_SE.po
+++ b/illustratr/languages/sv_SE.po
@@ -2,16 +2,35 @@
 # This file is distributed under the same license as the WordPress.com - Themes - Illustratr package.
 msgid ""
 msgstr ""
-"PO-Revision-Date: 2016-02-22 07:50:58+0000\n"
+"PO-Revision-Date: 2017-03-23 07:32:39+0000\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=n != 1;\n"
-"X-Generator: GlotPress/2.1.0-alpha\n"
+"X-Generator: GlotPress/2.4.0-alpha\n"
 "Language: sv_SE\n"
 "Project-Id-Version: WordPress.com - Themes - Illustratr\n"
 
-#: functions.php:96
+#: inc/wpcom-colors.php:168
+msgid "Accent"
+msgstr "Accentuering"
+
+#: inc/wpcom-colors.php:9
+msgid "Background"
+msgstr "Bakgrund"
+
+#. translators: used between list items, there is a space after the comma
+#: content-aside.php:45 content-audio.php:74 content-gallery.php:62
+#: content-image.php:56 content-link.php:45 content-quote.php:51
+#: content-status.php:49 content-video.php:74 content.php:84
+msgid "Tagged"
+msgstr "Taggad"
+
+#: inc/jetpack.php:120
+msgid "Older projects"
+msgstr "Äldre projekt"
+
+#: functions.php:104
 msgid "Footer"
 msgstr "Sidfot"
 
@@ -19,13 +38,13 @@ msgstr "Sidfot"
 msgid "Widgets"
 msgstr "Widgets"
 
-#: page-templates/portfolio-page.php:86
-msgid "Ready to publish your first project? <a href=\"%1$s\">Get started here</a>."
-msgstr "Redo att publicera ditt första projekt? <a href=\"%1$s\">Börja här</a>."
-
 #: search.php:16
 msgid "Search Results for: %s"
 msgstr "Sökresultat för: %s"
+
+#: page-templates/portfolio-page.php:86
+msgid "Ready to publish your first project? <a href=\"%1$s\">Get started here</a>."
+msgstr "Redo att publicera ditt första projekt? <a href=\"%1$s\">Börja här</a>."
 
 #: page-templates/portfolio-page.php:28
 msgid "Pages:"
@@ -44,19 +63,19 @@ msgctxt "1: date, 2: time"
 msgid "%1$s at %2$s"
 msgstr "%1$s kl. %2$s"
 
-#: inc/template-tags.php:64
-msgctxt "Previous post link"
-msgid "<span class=\"meta-nav\">&larr;</span> %title"
-msgstr "<span class=\"meta-nav\">&larr;</span> %title"
+#: inc/template-tags.php:87
+msgid "Pingback:"
+msgstr "Ping:"
 
 #: inc/template-tags.php:65
 msgctxt "Next post link"
 msgid "%title <span class=\"meta-nav\">&rarr;</span>"
 msgstr "%title <span class=\"meta-nav\">&rarr;</span>"
 
-#: inc/template-tags.php:87
-msgid "Pingback:"
-msgstr "Ping:"
+#: inc/template-tags.php:64
+msgctxt "Previous post link"
+msgid "<span class=\"meta-nav\">&larr;</span> %title"
+msgstr "<span class=\"meta-nav\">&larr;</span> %title"
 
 #: inc/template-tags.php:61
 msgid "Post navigation"
@@ -66,47 +85,59 @@ msgstr "Inläggsnavigering"
 msgid "Next <span class=\"meta-nav\">&rarr;</span>"
 msgstr "Nästa <span class=\"meta-nav\">&rarr;</span>"
 
-#: inc/template-tags.php:28
-msgid "Posts navigation"
-msgstr "Inläggsnavigering"
-
 #: inc/template-tags.php:32
 msgid "<span class=\"meta-nav\">&larr;</span> Previous"
 msgstr "<span class=\"meta-nav\">&larr;</span> Föregående"
 
-#: inc/customizer.php:29
-msgid "Hide title and content on Portfolio Page Template"
-msgstr "Göm rubrik och brödtext i portföljsidans mall"
+#: inc/template-tags.php:28
+msgid "Posts navigation"
+msgstr "Inläggsnavigering"
 
 #: inc/extras.php:104
 msgid "Page %s"
 msgstr "Sida %s"
 
-#: inc/customizer.php:19
-msgid "Theme Options"
-msgstr "Temainställningar"
+#: inc/customizer.php:24
+msgid "Hide title and content on Portfolio Page Template"
+msgstr "Göm rubrik och brödtext i portföljsidans mall"
 
-#: header.php:43
+#: header.php:42
 msgid "Skip to content"
 msgstr "Hoppa till innehåll"
 
-#: header.php:42
+#: header.php:41
 msgid "Menu"
 msgstr "Meny"
+
+#. translators: To add an additional PT Serif character subset specific to your
+#. language, translate this to 'cyrillic'. Do not translate into your own
+#. language.
+#: functions.php:162
+msgctxt "PT Serif font: add new subset (cyrillic)"
+msgid "no-subset"
+msgstr "no-subset"
+
+#. translators: If there are characters in your language that are not supported
+#. * by PT Serif, translate this to 'off'. Do not translate into your own
+#. language.
+#: functions.php:158
+msgctxt "PT Serif font: on or off"
+msgid "on"
+msgstr "på"
 
 #. translators: If there are characters in your language that are not supported
 #. * by Source Sans Pro, translate this to 'off'. Do not translate into your
 #. own language.
-#: functions.php:118
+#: functions.php:126
 msgctxt "Source Sans Pro font: on or off"
 msgid "on"
 msgstr "på"
 
-#: functions.php:68
+#: functions.php:76
 msgid "Social Menu"
 msgstr "Social meny"
 
-#: functions.php:67
+#: functions.php:75
 msgid "Primary Menu"
 msgstr "Primär meny"
 
@@ -114,14 +145,14 @@ msgstr "Primär meny"
 msgid "Theme: %1$s by %2$s."
 msgstr "Tema: %1$s av %2$s."
 
+#: footer.php:28
+msgid "Proudly powered by %s"
+msgstr "Drivs med %s"
+
 #: content-portfolio-single.php:16 content-portfolio.php:21 content.php:42
 msgctxt "Used between list items, there is a space after the comma."
 msgid ", "
 msgstr ", "
-
-#: footer.php:28
-msgid "Proudly powered by %s"
-msgstr "Drivs med %s"
 
 #: content-none.php:28 page-templates/portfolio-page.php:90
 msgid "It seems we can&rsquo;t find what you&rsquo;re looking for. Perhaps searching can help."
@@ -139,39 +170,36 @@ msgstr "Är du redo att posta ditt första inlägg? <a href=\"%1$s\">Starta här
 msgid "Nothing Found"
 msgstr "Inget funnet"
 
-#: content-aside.php:55 content-audio.php:84 content-gallery.php:72
-#: content-image.php:66 content-link.php:55 content-page.php:36
-#: content-portfolio-single.php:43 content-quote.php:61 content-status.php:59
-#: content-video.php:84 content.php:95 inc/template-tags.php:87
+#: content-aside.php:51 content-audio.php:80 content-gallery.php:68
+#: content-image.php:62 content-link.php:51 content-page.php:36
+#: content-portfolio-single.php:43 content-quote.php:57 content-status.php:55
+#: content-video.php:80 content.php:91 inc/template-tags.php:87
 #: inc/template-tags.php:121 page-templates/portfolio-page.php:36
 msgid "Edit"
 msgstr "Redigera"
 
-#: content-aside.php:52 content-audio.php:81 content-gallery.php:69
-#: content-image.php:63 content-link.php:52 content-page.php:33
-#: content-portfolio-single.php:40 content-quote.php:58 content-status.php:56
-#: content-video.php:81 content.php:92
+#: content-aside.php:48 content-audio.php:77 content-gallery.php:65
+#: content-image.php:59 content-link.php:48 content-page.php:33
+#: content-portfolio-single.php:40 content-quote.php:54 content-status.php:52
+#: content-video.php:77 content.php:88
 msgid "% Comments"
 msgstr "% kommentarer"
 
-#: content-aside.php:52 content-audio.php:81 content-gallery.php:69
-#: content-image.php:63 content-link.php:52 content-page.php:33
-#: content-portfolio-single.php:40 content-quote.php:58 content-status.php:56
-#: content-video.php:81 content.php:92
+#: content-aside.php:48 content-audio.php:77 content-gallery.php:65
+#: content-image.php:59 content-link.php:48 content-page.php:33
+#: content-portfolio-single.php:40 content-quote.php:54 content-status.php:52
+#: content-video.php:77 content.php:88
 msgid "1 Comment"
 msgstr "1 kommentar"
 
-#: content-aside.php:52 content-audio.php:81 content-gallery.php:69
-#: content-image.php:63 content-link.php:52 content-page.php:33
-#: content-portfolio-single.php:40 content-quote.php:58 content-status.php:56
-#: content-video.php:81 content.php:92
+#: content-aside.php:48 content-audio.php:77 content-gallery.php:65
+#: content-image.php:59 content-link.php:48 content-page.php:33
+#: content-portfolio-single.php:40 content-quote.php:54 content-status.php:52
+#: content-video.php:77 content.php:88
 msgid "Leave a comment"
 msgstr "Lämna en kommentar"
 
-#: content-aside.php:48 content-audio.php:77 content-gallery.php:65
-#: content-image.php:59 content-link.php:48 content-portfolio-single.php:36
-#: content-quote.php:54 content-status.php:52 content-video.php:77
-#: content.php:87
+#: content-portfolio-single.php:36
 msgid "Tagged %1$s"
 msgstr "Taggad %1$s"
 
@@ -228,6 +256,14 @@ msgstr "Arkiv"
 msgid "Projects"
 msgstr "Projekt"
 
+#: archive.php:63
+msgid "Chats"
+msgstr "Chattar"
+
+#: archive.php:60
+msgid "Audios"
+msgstr "Ljud"
+
 #: archive.php:57
 msgid "Statuses"
 msgstr "Statusar"
@@ -257,26 +293,26 @@ msgid "Asides"
 msgstr "Noteringar"
 
 #: archive.php:36
-msgid "Year: %s"
-msgstr "År: %s"
-
-#: archive.php:36
 msgctxt "yearly archives date format"
 msgid "Y"
 msgstr "Y"
+
+#: archive.php:36
+msgid "Year: %s"
+msgstr "År: %s"
 
 #: archive.php:33
 msgctxt "monthly archives date format"
 msgid "F Y"
 msgstr "F Y"
 
-#: archive.php:30
-msgid "Day: %s"
-msgstr "Dag: %s"
-
 #: archive.php:33
 msgid "Month: %s"
 msgstr "Månad: %s"
+
+#: archive.php:30
+msgid "Day: %s"
+msgstr "Dag: %s"
 
 #: archive.php:27
 msgid "Author: %s"
